@startuml
class Target {
    +getSuitDetails(): string
}
note bottom of Target
Интерфейс для получения информации о костюмах
end note

class Client {
    +displaySuitInfo()
}
note bottom of Client
Клиент использует интерфейс Target для отображения информации о костюмах
end note

class OldClothingSystem {
    +fetchOldSuitData(): string
}
note bottom of OldClothingSystem
Старая система с несовместимым методом для получения данных о костюмах
end note

class ObjectAdapter implements Target {
    - oldSystem: OldClothingSystem
    +getSuitDetails(): string
}
note bottom of ObjectAdapter
Адаптер использует объект OldClothingSystem для адаптации данных
end note

Client --> Target : Клиент использует интерфейс Target
ObjectAdapter --> OldClothingSystem : Адаптер содержит ссылку на OldClothingSystem

@enduml
